--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,9 +1,8 @@
 /* BASE */
 
 
-
-body,
-html {
+html, 
+body {
   background-color: $color-prim;
   height: 100%;
   margin: 0px;
@@ -46,18 +45,27 @@ p {
   color: black;
   font-size: 20px;
   font-family: "Yrsa";
+
+  @media #{$brk-narrow} {
+    font-size: 18px;
+  }
+  @media #{$brk-small} {
+    font-size: 16px;
+  }
 }
 
 .social,
+.UPARROW,
 #NAVMENU a,
 .PBLOCK  {
   opacity: .5;
   
-  transition: all ease .4s;
+  transition: all ease .3s;
 }
 
 
 a img.social:hover,
+.UPARROW:hover,
 #NAVMENU a:hover,
 .PBLOCK:hover  {
   opacity: 1;
@@ -135,6 +143,13 @@ button {
   border-bottom: 2px solid transparent;
   transition: all ease-in-out .4s;
 
+  @media #{$brk-narrow} {
+    font-size: 28px;
+  }
+  @media #{$brk-small} {
+    font-size: 25px;
+  }
+
 }
 
 .title:hover {
@@ -143,6 +158,15 @@ button {
   
 }
 
+.bottomMenu {
+    width: 100%;
+    height: 60px;
+    border-top: 1px solid #000;
+    position: fixed;
+    bottom: 0px;
+    z-index: 100px;
+    opacity: 0;
+}
 
 footer {
   background-color: $color-sec;
