--- a/scss/components/_ICONS.scss
+++ b/scss/components/_ICONS.scss
@@ -60,10 +60,21 @@
 
 /* LOGO =========================== opacity: .2;*/
 .LOGO1 {
-    margin-top: 35px;
+    margin-top: 55px;
     height: 74px;
     width: 120px;
     transition: all ease .5s;
+
+    @media #{$brk-narrow} {
+        margin-top: 20px;
+        height: 49px;
+        width: 80px;
+      }
+
+    @media #{$brk-small} {
+        height: 34px;
+        width: 55px;
+    }
   }
 
 .LOGO1:hover {
