--- a/scss/components/_NAV.scss
+++ b/scss/components/_NAV.scss
@@ -2,7 +2,7 @@
 
 
 .NAV {
-  background: transparent;
+  background: black;
   color: black;
   @include span-columns(12);
   text-align: right;
@@ -50,6 +50,21 @@
     animation-iteration-count: 1;
     animation-timing-function: ease-out;
     animation-duration: 0.6s;
+
+     @media #{$brk-narrow} {
+        height: 0%;
+        position: absolute;
+        margin-left: 55px;
+        
+       }
+
+      @media #{$brk-small} {
+        height: 0%;
+        position: absolute;
+        margin-left: 25px;
+        
+       }
+
 }
 
 @-moz-keyframes sidebar {
@@ -80,8 +95,6 @@
 
 
 
-
-
 #NAVMENU a {
   display: block;
 }
@@ -93,6 +106,10 @@
   margin-right: 10px;
   margin-top: 20px;
   display: inline;
+
+  @media #{$brk-narrow} {
+        display: none;
+  }
 }
 
 
@@ -102,8 +119,31 @@
   padding-bottom: 35px;
 }
 
+#BACKUP {
+  display: none;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  margin-right: 21px;
+  margin-bottom: 35px;
+  background-color: white;
+  z-index: 1;
+}
 
 
+
+.UPARROW {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  margin-right: 32px;
+  margin-bottom: 46px;
+  height: 18px;
+  width: 18px;
+}
 
 /* NAV MENU END =========================== */
 
