--- a/scss/layout/_CONTAINERS.scss
+++ b/scss/layout/_CONTAINERS.scss
@@ -7,20 +7,24 @@
 
 .NEW {
   @include outer-container(72%);
-  margin-right: 25px;
-  margin-left: 270px;
-
+  margin-right: 85px;
+  margin-left: 330px;
+  
 
   @media #{$brk-narrow} {
-    @include outer-container(100%);
+    @include outer-container(85%);
+  }
+
+  @media #{$brk-small} {
+    @include outer-container(90%);
   }
 
 }
 
 .NEW1 {
   @include outer-container(72%);
-  margin-right: 25px;
-  margin-left: 270px;
+  margin-right: 35px;
+  margin-left: 300px;
 
 
   @media #{$brk-narrow} {
@@ -51,13 +55,18 @@
 }
 
 .BREAKTOP {
-  margin-bottom: 130px;
+  margin-bottom: 55px;
   z-index: 900000;
   @include span-columns(12);
+
+  @media #{$brk-narrow} {
+    margin-bottom: 130px;
+  }
+
 }
 
 .BREAKTOP1 {
-  margin-bottom: 75px;
+  margin-bottom: 25px;
   z-index: 900000;
   @include span-columns(12);
 }
