--- a/scss/components/_NAV.scss
+++ b/scss/components/_NAV.scss
@@ -36,7 +36,7 @@
   background: $color-prim;
   @include span-columns(2);
 
-  -moz-animation-name: sidebar;
+    -moz-animation-name: sidebar;
     -moz-animation-iteration-count: 1;
     -moz-animation-timing-function: ease-out;
     -moz-animation-duration: 0.6s;
@@ -51,6 +51,8 @@
     animation-timing-function: ease-out;
     animation-duration: 0.6s;
 
+
+
      @media #{$brk-narrow} {
         height: 0%;
         position: absolute;
@@ -64,8 +66,7 @@
         margin-left: 25px;
         
        }
-
-}
+    }
 
 @-moz-keyframes sidebar {
     100% {
@@ -91,9 +92,7 @@
         transform: translateX(-180px);
     }
 }
-
-
-
+ 
 
 #NAVMENU a {
   display: block;
@@ -131,6 +130,14 @@
   margin-bottom: 35px;
   background-color: white;
   z-index: 1;
+  border: 1px solid;
+  border-color: #a8a8a8;
+  transition: all ease .3s;
+
+}
+
+#BACKUP:hover {
+  border-color: black;
 }
 
 
