--- a/scss/layout/_MOBILE NAV.scss
+++ b/scss/layout/_MOBILE NAV.scss
@@ -8,30 +8,31 @@
   
   #NAVMENU {
     width: 100%;
-    position: absolute;
-    top: 50px;
-    right: 0;
+    position: fixed;
     text-align: center;
     background: $mercury;
+    margin-top: 10px;
     display: none;
-
   }
+
 
   #NAVMENU .nav-mobile-wrap {
     height: calc(100vh - 50px);
-    padding: 70px 0;
+    padding: 60px 0;
+
 
   }
 
   #NAVMENU.push {
-    margin-top: 0; }
+    margin-top: 0;
+  }
 
   #NAVMENU a {
     display: inline-block;
-    margin: 35px 0;
+    margin: 20px 0;
     color: black;
     font-size: 20px;
-    }
+  }
 
 
 
@@ -40,17 +41,14 @@
     display: block; }
 
 
-
-
-
-
   /* Icon 2 */
   #nav-icon3 {
-    width: 35px;
-    height: 35px;
-    position: relative;
+    width: 50px;
+    height: 50px;
+    position: absolute;
     margin: 15px auto;
-    margin-right: 15px;
+    margin-top: 28px;
+    margin-right: 38px;
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
     -o-transform: rotate(0deg);
@@ -59,11 +57,24 @@
     -moz-transition: .5s ease-in-out;
     -o-transition: .5s ease-in-out;
     transition: .5s ease-in-out;
-    cursor: pointer; }
+    cursor: pointer;
+    top: 0;
+    right: 0;
+
+      @media #{$brk-small} {
+        width: 45px;
+        height: 45px;
+        margin-top: 25px;
+        margin-right: 5%;
+      }
+
+     }
+
+
 
   #nav-icon3 span {
     display: block;
-    position: absolute;
+    position: fixed;
     height: 3px;
     width: 100%;
     background: black;
@@ -77,7 +88,8 @@
     -webkit-transition: .25s ease-in-out;
     -moz-transition: .25s ease-in-out;
     -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out; }
+    transition: .25s ease-in-out;
+    }
 
   /* Icon 3 */
   #nav-icon3 span:nth-child(1) {
@@ -110,6 +122,8 @@
     top: 18px;
     width: 0%;
     left: 50%; }
+
+   
 
   }
 
