--- a/scss/components/_NAV.scss
+++ b/scss/components/_NAV.scss
@@ -33,21 +33,20 @@
   background: $color-prim;
   @include span-columns(2);
   z-index: 999;
-  
 
     -moz-animation-name: sidebar;
     -moz-animation-iteration-count: 1;
-    -moz-animation-timing-function: ease-out;
+    -moz-animation-timing-function: ease;
     -moz-animation-duration: 0.6s;
 
     -webkit-animation-name: sidebar;
     -webkit-animation-iteration-count: 1;
-    -webkit-animation-timing-function: ease-out;
+    -webkit-animation-timing-function: ease;
     -webkit-animation-duration: 0.6s;
 
     animation-name: sidebar;
     animation-iteration-count: 1;
-    animation-timing-function: ease-out;
+    animation-timing-function: ease;
     animation-duration: 0.6s;
 
 
@@ -55,7 +54,6 @@
      @media #{$brk-narrow} {
         width: 100%;
         height: 70px;
-        position: fixed;
         background: $color-prim;
         margin-left: 0px;
         position: relative;
@@ -70,13 +68,12 @@
     }
 
 
-
 @-moz-keyframes sidebar {
     100% {
         -moz-transform: translateX(0);
     }
    0% {
-        -webkit-transform: translateX(-180px);
+        -webkit-transform: translateX(-250px);
     }
 }
 
@@ -85,7 +82,7 @@
         -webkit-transform: translateX(0);
     }
     0% {
-        -webkit-transform: translateX(-180px);
+        -webkit-transform: translateX(-250px);
     }
 }
 @keyframes sidebar {
@@ -93,9 +90,14 @@
         transform: translateX(0);
     }
     0% {
-        transform: translateX(-180px);
+        transform: translateX(-250px);
     }
 }
+
+
+
+
+
  
 
 #NAVMENU a {
@@ -139,18 +141,10 @@
   margin-right: 21px;
   margin-bottom: 35px;
   background-color: white;
-  z-index: 1;
-  border: 1px solid;
-  border-color: #a8a8a8;
+  z-index: 1;  
   transition: all ease .3s;
-
-
 }
 
-#BACKUP:hover {
-  border-color: black;
-
-}
 
 
 
