--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -6,7 +6,7 @@ body {
   background-color: $color-prim;
   height: 100%;
   margin: 0px;
-
+  
 }
 
 h1 {
@@ -64,7 +64,8 @@ p {
 
 .social,
 .socialBTM,
-.PBLOCK  {
+.PBLOCK, 
+footer a  {
   opacity: .5;
   transition: all ease .3s;
 }
@@ -72,7 +73,8 @@ p {
 
 a img.social:hover,
 .socialBTM:hover,
-.PBLOCK:hover  {
+.PBLOCK:hover,
+footer a:hover  {
   opacity: 1;
   color: black; 
 }
@@ -216,15 +218,31 @@ button {
 
 
 footer {
+
+  display: none;
+
+  @media #{$brk-narrow} {
+    
   @include span-columns(12);
+  display: inline-block;
   position: relative;
   background-color: $color-prim;
-  height: 150px;
+  text-align: center;
   bottom: 0;
-
+  margin-bottom: 60px;
+  word-spacing: 30px;
+  }
 }
 
+footer a {
+display: none;
 
+   @media #{$brk-narrow} {
+  display: inline-block;
+  font-size: 12px;
+  font-family: 'Montserrat', sans-serif;
+  }
+}
 
 
 
