--- a/scss/layout/_MOBILE NAV.scss
+++ b/scss/layout/_MOBILE NAV.scss
@@ -10,7 +10,7 @@
     width: 100%;
     position: fixed;
     text-align: center;
-    background: $mercury;
+    background: $color-prim;
     margin-top: 10px;
     display: none;
   }
@@ -43,11 +43,11 @@
 
   /* Icon 2 */
   #nav-icon3 {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 55px;
     position: absolute;
     margin: 15px auto;
-    margin-top: 28px;
+    margin-top: 38px;
     margin-right: 38px;
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
@@ -61,11 +61,12 @@
     top: 0;
     right: 0;
 
+
       @media #{$brk-small} {
         width: 35px;
         height: 35px;
-        margin-top: 25px;
-        margin-right: 5%;
+        margin-top: 35px;
+        margin-right: 5.5%;
       }
 
      }
@@ -123,8 +124,42 @@
     width: 0%;
     left: 50%; }
 
-   
-
+  
   }
+
+
+
+
+.socialBTM {
+  display: none;
+  @media #{$brk-narrow} {
+    display: inline-block;
+    height: 25px;
+    width: 25px;
+    margin-right: 25px;
+    margin-top: 20px;
+  }
+}
+
+.SocialWrapBTM {
+
+ display: none;
+
+  @media #{$brk-narrow} {
+    @include span-columns(12);
+    display: inline-block;
+    position: relative;
+    bottom: 0;
+    padding-bottom: 30px;
+    margin-top: 70px;
+    margin-left: 10px;
+    z-index: 999;
+    text-align: center;
+  }
+}
+
+
+
+
 
 /* MOBILE MENU END   ====================*/
