--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -6,8 +6,17 @@ body {
   background-color: $color-prim;
   height: 100%;
   margin: 0px;
-  
 }
+
+body.FIXED {
+
+  @media #{$brk-narrow} {
+     overflow: hidden;
+
+  }
+}
+
+
 
 h1 {
   font-family: 'Montserrat' , sans-serif;
@@ -147,6 +156,14 @@ footer a:hover  {
 }
 
 
+.split {
+  @include span-columns(12);
+  background-color: $color-prim;
+  height: 10px;
+  
+}
+
+
 
 .CONTACT {
   padding: 0px 80px;
@@ -162,17 +179,6 @@ footer a:hover  {
     
   }
 }
-
-
-hr {
-  width: 70%;
-  height: 2px;
-  background-color: black;
-  margin: 130px auto;
-}
-
-
-
 
 
 button {
@@ -218,9 +224,17 @@ button {
 
 
 footer {
-
-  display: none;
-
+  @include span-columns(12);
+  display: inline-block;
+  position: relative;
+  background-color: $color-prim;
+  text-align: center;
+  bottom: 0;
+  margin-top: 125px;
+  margin-bottom: 35px;
+  word-spacing: 0px;
+  font-size: 12px;
+  opacity: .5;
   @media #{$brk-narrow} {
     
   @include span-columns(12);
@@ -229,15 +243,22 @@ footer {
   background-color: $color-prim;
   text-align: center;
   bottom: 0;
-  margin-bottom: 60px;
-  word-spacing: 30px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  
   }
 }
 
-footer a {
-display: none;
+footer img {
+  height: 20px;
+  width: 35px;
+}
 
+footer a {
+
+  display: none;
    @media #{$brk-narrow} {
+    word-spacing: 30px;
   display: inline-block;
   font-size: 12px;
   font-family: 'Montserrat', sans-serif;
