--- a/scss/components/_ICONS.scss
+++ b/scss/components/_ICONS.scss
@@ -71,6 +71,8 @@
         margin-left: 38px;
         height: 39px;
         width: 70px;
+        position: relative;
+        z-index: 100;
       }
 
     @media #{$brk-small} {
