--- a/scss/layout/_MOBILE NAV.scss
+++ b/scss/layout/_MOBILE NAV.scss
@@ -1,26 +1,24 @@
 
-/* MOBILE MENU   ====================*/  
+/* MOBILE MENU  calc(100vh - 50px) ====================*/  
 
 
 @media (max-width: 768px) {
  
-
   
   #NAVMENU {
     width: 100%;
     position: fixed;
     text-align: center;
     background: $color-prim;
-    margin-top: 10px;
+    margin-top: 0px;
     display: none;
+   
   }
 
 
   #NAVMENU .nav-mobile-wrap {
     height: calc(100vh - 50px);
-    padding: 60px 0;
-
-
+    padding: 30px 0;
   }
 
   #NAVMENU.push {
@@ -29,9 +27,10 @@
 
   #NAVMENU a {
     display: inline-block;
-    margin: 20px 0;
+    margin: 15px 0;
     color: black;
     font-size: 20px;
+
   }
 
 
@@ -60,6 +59,7 @@
     cursor: pointer;
     top: 0;
     right: 0;
+
 
 
       @media #{$brk-small} {
@@ -150,8 +150,8 @@
     display: inline-block;
     position: relative;
     bottom: 0;
-    padding-bottom: 30px;
-    margin-top: 70px;
+    padding-bottom: 20px;
+    margin-top: 40px;
     margin-left: 10px;
     z-index: 999;
     text-align: center;
