Compressed images / styled mobile nav

--- a/scss/components/_ICONS.scss
+++ b/scss/components/_ICONS.scss
@@ -68,7 +68,7 @@
 
     @media #{$brk-narrow} {
         margin-top: 30px;
-        margin-left: 38px;
+        margin-left: 5%;
         height: 39px;
         width: 70px;
         position: relative;
