--- a/scss/layout/_IMAGE RULES.scss
+++ b/scss/layout/_IMAGE RULES.scss
@@ -155,7 +155,8 @@ img {
 .BLOCK3 {
    @include span-columns(5);
    float: right;
-   margin-right: 0px;
+   
+
     @media #{$brk-small} {
     @include span-columns(12);
   }
@@ -276,17 +277,27 @@ img {
 }
 
 
-
-
 .come-in {
   transform: translateY(150px);
+  -ms-transform: translateY(150px);
+  -webkit-transform: translateY(150px);
+  -moz-transform: translateY(150px);
+  -o-transform: translateY(150px);
+
   animation: come-in 0.8s ease forwards;
+  -webkit-animation: come-in 0.8s ease forwards;
 }
+
 .come-in:nth-child(odd) {
   animation-duration: 0.6s; /* So they look staggered */
+  -webkit-animation-duration: 0.6s;
 }
 
 @keyframes come-in {
+  to { transform: translateY(0); }
+}
+
+@-webkit-keyframes come-in {
   to { transform: translateY(0); }
 }
 
