--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -11,8 +11,8 @@ body {
 body.FIXED {
 
   @media #{$brk-narrow} {
-     overflow: hidden;
-
+     overflow: hidden !important;
+     height: 100%;
   }
 }
 
@@ -31,6 +31,10 @@ h2 {
   font-size: 32px;
   color: black;
   margin-top: 0px;
+
+  @media #{$brk-narrow} {
+     font-size: 25px;
+  }
 }
 
 a {
